--- a/components/header/style.css
+++ b/components/header/style.css
@@ -1,8 +1,19 @@
 header {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
     align-items: center;
     background-color: lightpink;
     padding: 25px;
+    margin-bottom: 25px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+header div{
+    display: flex;
+    flex-direction: column;
+    
+}
+
+p{
+font-size: 14px;
 }
