--- a/sign-up/style.css
+++ b/sign-up/style.css
@@ -1,11 +1,111 @@
-#sign-up-form{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    
+@import url("https://fonts.googleapis.com/css2?family=Urbanist:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,800;1,900&display=swap");
+
+#sign-up-form {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  border-radius: 8px;
+  width: 100%;
+  max-width: 480px;
+  max-height: 100%;
+  background-color: #10101d;
+  padding: 24px;
 }
 
-#sign-up-form label{
-    margin-top: 16px;
+#sign-up-form label {
+  margin: 5px;
+  display: flex;
+  justify-content: flex-start;
+  align-items: start;
+}
+
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+  font-family: "Urbanist";
+  color: #ffffff91;
+}
+
+body {
+  background: rgb(191, 156, 224);
+  background: linear-gradient(
+    90deg,
+    rgba(191, 156, 224, 1) 0%,
+    rgba(238, 156, 167, 1) 100%
+  );
+  width: 100%;
+  height: 100vh;
+  margin: 0;
+  padding: 16px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+h1 {
+  text-align: center;
+  font-size: 25px;
+  line-height: 32px;
+  padding: 40px;
+  color: #fff;
+}
+
+input {
+  border-right: none;
+  width: 80%;
+  /* padding: 15px; */
+  outline: none;
+  border: none;
+  border-bottom: 1px solid #fff;
+  background-color: transparent;
+  color: #fff;
+  box-shadow: none;
+  border-radius: 0;
+  margin-bottom: 23px;
+  color: #fff;
+}
+
+input[type="date"] {
+  background-color: transparent;
+  color: #ffffff;
+  outline: none;
+}
+
+input label {
+  padding-bottom: 10px;
+  color: #fff;
+}
+
+::-webkit-calendar-picker-indicator {
+  filter: invert(1);
+}
+
+input[type="file"] {
+  border: none;
+}
+
+input[type="file"]::file-selector-button {
+  font-family: "Urbanist";
+  padding: 10px;
+  outline: none;
+  border-width: 2px;
+  box-shadow: none;
+  background-color: transparent;
+  border-color: #ee9ca7;
+  color: #fff;
+  border-radius: 5%;
+  cursor: pointer;
+}
+
+button {
+  border: none;
+  margin: 30px;
+  padding: 15px;
+  background: #ee9ca7;
+  color: #fff;
+  border-radius: 5%;
+  cursor: pointer;
+  box-shadow: 0 0 12px 0 rgba(238, 156, 167, 0.4);
 }
